--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.Grid-main {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
