Improved styling slightly

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,9 +1,18 @@
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
 }
 
 ul {
@@ -11,5 +20,49 @@ ul {
 }
 
 li {
-  text-align: left;
+  display: flex;
+  align-items: center;
+  margin-bottom: 4px;
+}
+
+li > * {
+  vertical-align: middle;
+}
+
+li > img {
+  width: 40px;
+  height: 40px;
+  background: #ccc;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.my-profile {
+  display: flex;
+  align-items: center;
+  font-size: 1.25rem;
+  margin: 16px;
+}
+
+.my-profile > img {
+  width: 60px;
+  height: 60px;
+  background: #ccc;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
+fieldset {
+  border: 0;
+}
+
+.login {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-list {
+  border-right: 1px solid #ccc;
 }
