--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -68,3 +68,35 @@ fieldset {
 .user-list {
   border-right: 1px solid #ccc;
 }
+
+button {
+  font-size: 16px;
+  padding: 7px 16px;
+  border: 0;
+  color: white;
+  background-color: #008ba3;
+  font-weight: 500;
+  transition: all 0.1s;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #00bcd4;
+}
+
+input {
+  font-size: 16px;
+  padding: 6px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #008ba3;
+  transition: all 0.1s;
+}
+
+fieldset > input {
+  margin: 0 8px 8px 0;
+}
+
+input:focus {
+  border-color: #00bcd4;
+}
